# Cpp

./: .gitignore  memo.xlsx
GameOfLife/: CMakeLists.txt  GameOfLife.cbp  GameOfLife.depend  GameOfLife.layout  GoL_GUI.cbp  GoL_GUI.depend  GoL_GUI.layout  board.cpp  board.h  main.cpp  makefile
GameOfLife/src/: board.cpp  board.h  main.cpp
GameOfLife/test/: test.cpp
GoL_GUI/: GoL_GUI.cbp  GoL_GUI.depend  GoL_GUI.layout  board.cpp  board.h  main.cpp
MyDebug/: MyDebug.cbp  MyDebug.depend  main.cpp
MyFirst/: MyFirst.cbp  MyFirst.depend  MyFirst.layout  Triangle.cpp  add.cpp  main.cpp  name.cpp
